# demo-simple-rpg-lore-generator

./: .gitignore  README.md  brainstorm.md  pyproject.toml
src/void_masters/: api.py  crew.py  main.py  tasks.py
src/void_masters/config/: agents.yaml  tasks.yaml
src/void_masters/tools/: character_tool.py
